# backend-rust-teacher

./: .env  .gitignore  Cargo.toml
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_limpiar_bimestre_down.sql  000002_limpiar_bimestre_up.sql  0001_init.sql
src/: bd.rs  config.rs  db.rs  main.rs  models.rs
src/handlers/: academic.rs  alumno.rs  alumnos.rs  auditoria.rs  auth.rs  bimestre.rs  bimestres.rs  competencia.rs  competencias.rs  criterio.rs  criterios.rs  evaluacion.rs  evaluaciones.rs  evaluation.rs  exportacion.rs  exportaciones.rs  grado.rs  grados.rs  mod.rs  seccion.rs  secciones.rs  sesion.rs  sesiones.rs  sessions.rs  students.rs
src/models/: alumno.rs  auditoria.rs  bimestre.rs  calificacion.rs  competencia.rs  criterio.rs  evaluacion.rs  exportacion.rs  grado.rs  mod.rs  seccion.rs  sesion.rs
src/routes/: health.rs  mod.rs
