[package]
name = "backend-rust-teacher"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7"
shuttle-actix-web = "0.56.0"
shuttle-runtime = "0.56.0"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-native-tls", "rust_decimal", "migrate", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
shuttle-shared-db = { version = "0.56.0", features = ["postgres"] }
rust_decimal = { version = "1", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
oauth2 = "5.0.0"
validator = { version="0.20.0", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.21.3"
chrono = { version = "0.4.41", features = ["serde"] }
umya-spreadsheet = "2.3.1"
