[package]
name = "backend-rust-teacher"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shuttle
shuttle-runtime = "0.55.0"
shuttle-actix-web = "0.55.0"

# Servidor web
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }

# Base de datos
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
deadpool-postgres = "0.10.5"
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1", "with-chrono-0_4"] }

# Autenticación
jsonwebtoken = "8.3.0"
oauth2 = "4.4.2"

# Serialización/Deserialización
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"

# Manejo de errores
thiserror = "1.0.44"
anyhow = "1.0.72"

# Utilidades
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
futures = "0.3.28"

# Para generar Excel (alternativa más fácil de compilar)
simple_excel_writer = "0.2.0"
tracing = "0.1.41"
